# Flatzinc-To-IDP

./: AUTHORS  Makefile.am  README  TODO  configure.ac  main.cpp
flatzincsupport/: FZDatastructs.cpp  FZDatastructs.hpp  FlatZincMX.cpp  FlatZincMX.hpp  InsertWrapper.cpp  InsertWrapper.hpp  flatzinclexer.lpp  flatzincparser.ypp
